--- a/class/students.html
+++ b/class/students.html
@@ -30,32 +30,6 @@
     <div id="nameList"></div>
 </div>
 
-<div id="listMissionPointsPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['listMissionPointsPop'],['studentStatsPop','missionsPop'])"><span>f</span></div>
-    <a href="tel:8645694879"><div class="contactButton2">x</div></a>
-    <a href="sms:8645694879"><div class="contactButton2">d</div></a>
-    <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton2">v</div></a>
-  </div>
-  <table class="missionsKeyTable">
-    <tr>
-      <td class="complete"></td>
-      <td class="equalSign">=</td>
-      <td class="keyLabel">complete</td>
-      <td class="incomplete"></td>
-      <td class="equalSign">=</td>
-      <td class="keyLabel">incomplete</td>
-      <td class="missing"></td>
-      <td class="equalSign">=</td>
-      <td class="keyLabel">missing</td>
-    </tr>
-  </table>
-  <p id="asHeading"></p>
-  <div id="listAS"></div>
-  <p id="mvHeading"></p>
-  <div id="listMV"></div>
-</div>
-
 <div id="studentStatsPop" class="pop">
   <div class="navigationButtonContainer">
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
@@ -120,7 +94,7 @@
         </tr>
       </table>
     </div>
-    <div class="tableContainer" onclick="loadMissionsList()">
+    <div>
     <p id="totalProgressTableP"></p>
     <table id="totalProgressTable" class="progressBarTable">
       <tr>
@@ -167,7 +141,7 @@
       </tr>
     </table>
     </div>
-    <div class="tableContainer" onclick="loadMissionsList()">
+    <div>
     <p id="asProgressTableP"></p>
     <table id="asProgressTable" class="progressBarTable">
       <tr>
@@ -214,7 +188,7 @@
       </tr>
     </table>
     </div>
-    <div class="tableContainer" onclick="loadMissionsList()">
+    <div>
     <p id="mvProgressTableP"></p>
     <table id="mvProgressTable" class="progressBarTable"> 
       <tr>
