--- a/class/students.html
+++ b/class/students.html
@@ -441,7 +441,7 @@
       <div id="as1Points" class="roundButton numberButton asPts">1</div>
       <div id="as2Points" class="roundButton numberButton asPts">2</div>
       <div id="as3Points" class="roundButton numberButton asPts">3</div>
-      <div id="as4Points" class="roundButton numberButton asPts">4</div>
+      <div id="as4Points" class="roundButton numberButton asPts" style="padding-right:3px">4</div>
       <div id="as5Points" class="roundButton numberButton asPts">5</div>
       <div id="as6Points" class="roundButton numberButton asPts">6</div>
   </div>
@@ -484,7 +484,7 @@
       <div class="roundButton numberButton mvPts">1</div>
       <div class="roundButton numberButton mvPts">2</div>
       <div class="roundButton numberButton mvPts">3</div>
-      <div id="mv4Points" class="roundButton numberButton mvPts">4</div>
+      <div id="mv4Points" class="roundButton numberButton mvPts" style="padding-right:3px">4</div>
       <div id="mv5Points" class="roundButton numberButton mvPts">5</div>
       <div id="mv6Points" class="roundButton numberButton mvPts">6</div>
       <div id="mv7Points" class="roundButton numberButton mvPts">7</div>
