--- a/class/index.html
+++ b/class/index.html
@@ -38,6 +38,16 @@
   <div id="nameList3"></div>
 </div>
 
+<div id="openInsigniaPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton" onclick="pop(['openInsigniaPop'],[_sharedPop])"><span>f</span></div>
+    <div class="homeButton" onclick="goHome()"><span>5</span></div>
+  </div>
+  <div>
+    <div id="displayInsignia"></div>
+  </div>
+</div>
+
 <div id="sortChoicePop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton" onclick="pop(['sortChoicePop'],['mainMenuPop'])"><span>f</span></div>
@@ -262,21 +272,21 @@
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
 
-    <div id="studentStatsTopContainerDiv">
-      <div id="studentStatsInsignia"></div>
-      <div id="studentStatsName">
-        <p id="dispRankName"></p>
-        <p id="dispName" onclick="toggleAtt()"></p>
-        <p id="statsClassRank" onclick="sortByPoints(['studentPop','missionsPop'])"></p>
+    <div id="studentPopTopContainerDiv">
+      <div id="studentPopInsignia"></div>
+      <div id="studentPopInfo">
+        <p id="studentPopRankName"></p>
+        <p id="studentPopName" onclick="toggleAtt()"></p>
+        <p id="studentPopClassRank" onclick="sortByPoints(['studentPop','missionsPop'])"></p>
       </div>
     </div>
     <div id="penContainer">
         <div class="studentPopButtons" onclick="loadStudentStats()">stats</div>
         <div class="studentPopButtons" id="editInfoButton" onclick="populateStudentFields(); loadStudentPhoto()">edit info</div>
         <div class="studentPopButtons" id="notesButton" onclick="pop(['studentPop','missionsPop','asPointsPop','mvPointsPop'],['notesPop','notesList']); populateNotes(['studentPop','missionsPop'])">notes</div>
-        <div class="studentPopButtons"></div>
+        <div class="studentPopButtons" id="currentPoints"></div>
         <div class="studentPopButtons" onclick="loadStudentData()">properties</div>
-        <div class="studentPopButtons"></div>
+        <div class="studentPopButtons" id="neededPoints"></div>
     </div>
 </div>
 
@@ -287,10 +297,10 @@
   </div>
   <div id="studentStatsTopContainerDiv">
     <div id="studentStatsInsignia"></div>
-    <div id="studentStatsName">
-      <p id="statsRankName"></p>
-      <p id="statsName"></p>
-      <p id="statsClassRank"></p>
+    <div id="studentStatsInfo">
+      <p id="studentStatsRankName"></p>
+      <p id="studentStatsName"></p>
+      <p id="studentStatsClassRank"></p>
     </div>
   </div>
   <div id="studentStatsBottomContainerDiv">
