--- a/class/students.html
+++ b/class/students.html
@@ -17,7 +17,7 @@
     <input id="searchField" type="text" placeholder="enter child's last name" onkeydown="if(event.keyCode==13)document.getElementById('submitButton').click()"/>
     <div id="submitButton" onclick="findStudent()">S</div>
   </div>
-  <p style="font-size:15px;color:darkorange;">Hint: if your child shares the same last name as another child, you will be prompted to choose the correct child on the next screen.  To avoid this step, enter their first and last name together in the search box above.</p><br>
+  <p style="font-size:15px;color:orange;">Hint: if your child shares the same last name as another child, you will be prompted to choose the correct child on the next screen.  To avoid this step, enter their first and last name together in the search box above.</p><br>
   <p style="font-size:15px;">Use the contact buttons below for help.</p>
   <div class="navigationButtonContainer" style="margin-top:35px;">
     <a href="tel:8645694879"><div class="contactButton2">x</div></a>
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <p style="color:darkorange;font-size:15px;text-align:center;">Click on any progress bar below to see more info.</p>
+  <p style="color:orange;font-size:15px;text-align:center;">Click on any progress bar below to see more info.</p>
 
   <div id="studentStatsBottomContainerDiv">
     <div class="tableContainer" onclick="loadRankTable()">
