--- a/class/index.html
+++ b/class/index.html
@@ -248,37 +248,32 @@
 </div>
 
 <div id="studentPop" class="pop">
-    <div class="navigationButtonContainer">
-      <div class="backButton" onclick="goHome()"><span>f</span></div>
-      <div class="secretButton" onclick="loadStudentData()"></div>
-      <div class="homeButton" onclick="goHome()"><span>5</span></div>
-    </div>
+  <div class="navigationButtonContainer">
+    <div class="backButton" onclick="goHome()"><span>f</span></div>
+    <div class="secretButton" onclick="loadStudentData()"></div>
+    <div class="homeButton" onclick="goHome()"><span>5</span></div>
+  </div>
 
-    <div id="studentPopTopContainerDiv">
-      <div id="studentPopInsignia"></div>
-      <div id="studentPopInfo">
-        <p id="studentPopRankName"></p>
-        <p id="studentPopName" onclick="toggleAtt()"></p>
-        <p id="studentPopPts"></p>
-        <p id="studentPopClassRank" onclick="sortByPoints(['studentPop','missionsPop'])"></p>
-      </div>
+  <div id="studentPopTopContainerDiv">
+    <div id="studentPopInsignia"></div>
+    <div id="studentPopInfo">
+      <p id="studentPopRankName"></p>
+      <p id="studentPopName" onclick="toggleAtt()"></p>
+      <p id="studentPopPts"></p>
+      <p id="studentPopClassRank" onclick="sortByPoints(['studentPop','missionsPop'])"></p>
     </div>
+  </div>
 
-    <div>
-      <table id="studentMenuTable">
-        <tr>
-          <td id="studentMenu0" onclick="studentMenuSwitch(0)" style="background-color: #777">MISSIONS</td>
-          <td id="studentMenu1" onclick="studentMenuSwitch(1)">STATS</td>
-          <td id="studentMenu2" onclick="studentMenuSwitch(2)">INFO</td>
-          <td id="studentMenu3" onclick="studentMenuSwitch(3)">NOTES</td>
-        </tr>
-      </table>
-    </div>
-    <!-- <div id="penContainer">
-        <div class="studentPopButtons" onclick="loadStudentStats()">stats</div>
-        <div class="studentPopButtons" id="editInfoButton" onclick="populateStudentFields(); loadStudentPhoto()">edit info</div>
-        <div class="studentPopButtons" id="notesButton" onclick="pop(['studentPop','missionsPop','asPointsPop','mvPointsPop'],['notesPop','notesList']); populateNotes(['studentPop','missionsPop'])">notes</div>
-    </div> -->
+  <div>
+    <table id="studentMenuTable">
+      <tr>
+        <td id="studentMenu0" onclick="studentMenuSwitch(0)" style="background-color: #777">MISSIONS</td>
+        <td id="studentMenu1" onclick="studentMenuSwitch(1)">STATS</td>
+        <td id="studentMenu2" onclick="studentMenuSwitch(2)">INFO</td>
+        <td id="studentMenu3" onclick="studentMenuSwitch(3)">NOTES</td>
+      </tr>
+    </table>
+  </div>
 </div>
 
 <div id="actionAlertPop" class="pop">
@@ -654,7 +649,7 @@
       <input class="textInputField1" id="editEmail" type="text" placeholder="email address"/>
     </div>
     <div class="optionButtonContainer">
-      <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],['studentPop','missionsPop']); flagOff(); clearStudentFields()">X</div>
+      <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],['missionsPop']); flagOff(); clearStudentFields(); resetStudentMenu();">X</div>
       <div class="roundButton deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
       <div class="roundButton okButton" onclick="editStudent()">V</div>
     </div>
