--- a/class/index.html
+++ b/class/index.html
@@ -90,8 +90,9 @@
           </div>
           <div class="button" id="promotionButton" onclick="pop(['alertsPop'],['promoListPop'])">Promotions</div>
           <div class="button" id="birthdayButton" onclick="pop(['alertsPop'],['bdayListPop'])">Birthdays</div>
-          <div class="button" id="photosNeededButton" onclick="pop(['alertsPop'],['photosNeededPop'])">Photos</div>
-          <div class="button" id="emailsNeededButton" onclick="pop(['alertsPop'],['emailsNeededPop'])">Emails</div>
+          <div class="button" id="photosNeededButton" onclick="pop(['alertsPop'],['photosNeededPop'])">Missing Photos</div>
+          <div class="button" id="emailsNeededButton" onclick="pop(['alertsPop'],['emailsNeededPop']); _array = ['emailsNeededPop']">Missing Emails</div>
+          <div class="button" id="birthdaysNeededButton" onclick="pop(['alertsPop'],['birthdaysNeededPop']); _array = ['birthdaysNeededPop']">Missing Birthdays</div>
       </div>
 </div>
 
@@ -649,7 +650,7 @@
       <input class="textInputField1" id="editEmail" type="text" placeholder="email address"/>
     </div>
     <div class="optionButtonContainer">
-      <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],[_array]); flagOff(); clearStudentFields(); resetStudentMenu();">X</div>
+      <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],[_array]); clearStudentFields(); resetStudentMenu();">X</div>
       <div class="roundButton deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
       <div class="roundButton okButton" onclick="editStudent()">V</div>
     </div>
@@ -1010,6 +1011,16 @@
   <div id="emailsNeededListAbsent"></div>
 </div>
 
+<div id="birthdaysNeededPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton" onclick="pop(['birthdaysNeededPop'],['alertsPop'])"><span>f</span></div>
+    <div class="homeButton" onclick="goHome()"><span>5</span></div>
+  </div>
+  <div id="birthdaysNeededList"></div>
+  <p id="absentBirthdaysNeeded">Absent:</p>
+  <div id="birthdaysNeededListAbsent"></div>
+</div>
+
 <div id="studentPropertiesPop" class="pop">
   <div id="studentData">
     <p>firstName: <span id="firstName"></span></p>
@@ -1061,9 +1072,6 @@
 </div>
 
 <div id="rankChartPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['rankChartPop'],['studentStatsPop'])"><span>f</span></div>
-  </div>
     <a href="../docs/ranks.pdf" target="_blank"><p>click here to download printable chart</p></a>
     <div id = "rankChartContainer">
     <table id="rankChartTable">
@@ -1460,9 +1468,6 @@
 </div>
 
 <div id="studentAttStatsPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['studentAttStatsPop'],['studentStatsPop'])"><span>f</span></div>
-  </div>
   <div id="studentAttTableDiv">
     <table id="studentAttTable">
       <tr class="tableHeaderRow">
