--- a/class/index.html
+++ b/class/index.html
@@ -595,22 +595,22 @@
           <input class="textInputField4" id="newBdayMonth" type="text" placeholder="Month" style="margin-right:10px">
         </div>
         <div>
-          <input class="textInputField4" id="newBdayDate" type="text" placeholder="Day"/>
+          <input class="textInputField4" id="newBdayDate" type="text" placeholder="Day" onkeydown="if(event.keyCode==13)document.getElementById('newStudentOkButton').click()"/>
         </div>
       </div>
     </div>
   </div>
   <div>
     <p>Email Address</p>
-    <input class="textInputField1" id="newEmail" type="text" placeholder="email address"/>
+    <input class="textInputField1" id="newEmail" type="text" placeholder="email address" onkeydown="if(event.keyCode==13)document.getElementById('newStudentOkButton').click()"/>
   </div>
   <div>
     <p>Note</p>
-    <textarea id="initialNote" rows="10" cols="30" placeholder="note"></textarea>
+    <textarea id="initialNote" rows="10" cols="30" placeholder="note" onkeydown="if(event.keyCode==13)document.getElementById('newStudentOkButton').click()"></textarea>
   </div>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['newStudentPop'],['mainPop']); clearStudentFields()">X</div>
-    <div class="roundButton okButton" onclick="newStudent()">V</div>
+    <div class="roundButton newStudentOkButton" id="okButton" onclick="newStudent()">V</div>
   </div>
 </div>
 
@@ -619,69 +619,66 @@
     <div class="genderAndBdayContainer">
       <div>
         <p style="margin-top:0px">First Name</p>
-        <input class="textInputField3" id="editFirstName" type="text" placeholder="First Name"/>
+        <input class="textInputField3" id="editFirstName" type="text" placeholder="First Name" onkeydown="if(event.keyCode==13)document.getElementById('editStudentOkButton').click()"/>
       </div>
       <div style="width:24px; margin:0px"></div>
       <div>
         <p style="margin-top:0px">Last Name</p>
-        <input class="textInputField3" id="editLastName" type="text" placeholder="Last Name"/>
+        <input class="textInputField3" id="editLastName" type="text" placeholder="Last Name" onkeydown="if(event.keyCode==13)document.getElementById('editStudentOkButton').click()"/>
       </div>
     </div>
     <div class="genderAndBdayContainer">
       <div>
         <p>Gender</p>
-        <input class="textInputField2" id="editGender" type="text" placeholder="M or F"/>
+        <input class="textInputField2" id="editGender" type="text" placeholder="M or F" onkeydown="if(event.keyCode==13)document.getElementById('editStudentOkButton').click()"/>
       </div>
       <div style="width:42px; margin:0px"></div>
       <div>
         <p>Birthday</p>
         <div class="flexContainer">
           <div>
-            <input class="textInputField4" id="editBdayMonth" type="text" placeholder="Month" style="margin-right:10px">
+            <input class="textInputField4" id="editBdayMonth" type="text" placeholder="Month" style="margin-right:10px" onkeydown="if(event.keyCode==13)document.getElementById('editStudentOkButton').click()"/>
           </div>
           <div>
-            <input class="textInputField4" id="editBdayDate" type="text" placeholder="Day"/>
+            <input class="textInputField4" id="editBdayDate" type="text" placeholder="Day" onkeydown="if(event.keyCode==13)document.getElementById('editStudentOkButton').click()"/>
           </div>
         </div>
       </div>
     </div>
     <div>
       <p>Email Address</p>
-      <input class="textInputField1" id="editEmail" type="text" placeholder="email address"/>
+      <input class="textInputField1" id="editEmail" type="text" placeholder="email address"
+      onkeydown="if(event.keyCode==13)document.getElementById('editStudentOkButton').click()"/>
     </div>
     <div class="optionButtonContainer">
       <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],[_array]); clearStudentFields(); resetStudentMenu();">X</div>
       <div class="roundButton deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
-      <div class="roundButton okButton" onclick="editStudent()">V</div>
+      <div class="roundButton okButton" id="editStudentOkButton" onclick="editStudent()">V</div>
     </div>
     <div id="dispStudentPhoto" onclick="photoLinks()"></div>
   </div>
 </div>
 
-<div id="studentNotesPop" class="pop">
+<div id="studentNotesPop" class="pop" style="padding-top:0px">
   <p id="studentNotesHeader" class="notesListHeader"></p>
-  <div id="studentNotesList"></div>
+  <div id="studentNotesList">
+  </div>
 </div>
 
 <div id="teacherNotesPop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton" onclick="pop(['teacherNotesPop','editTeacherNotePop'],['mainMenuPop'])"><span>f</span></div>
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
-    <div class="roundButton addButton" onclick="pop(['teacherNotesPop'],['addTeacherNotePop','addTeacherNote'])">;</div>
+    <!-- <div class="roundButton addButton" onclick="pop(['teacherNotesPop'],['addTeacherNotePop','addTeacherNote'])">;</div> -->
   </div>
-  <p class="notesListHeader">Teacher Notes</p>
   <div id="teacherNotesList"></div>
 </div>
 
 <div id="addStudentNotePop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['addNotePop'],['studentNotesPop','studentNotesList'])"><span>f</span></div>
-    <div class="homeButton" onclick="goHome()"><span>5</span></div>
-  </div>
-  <textarea id="addNote" rows="10" cols="30"></textarea>
+  <textarea id="addStudentNote" rows="10" cols="30" onkeydown="if(event.keyCode==13)document.getElementById('addStudentNoteOkButton').click()" placeholder="Add New Note"></textarea>
   <div class="optionButtonContainer">
-    <div class="roundButton cancelButton" onclick="pop(['addNotePop'],['studentNotesPop','studentNotesList'])">X</div>
-    <div class="roundButton okButton" onclick="addNote()">V</div>
+    <div class="roundButton cancelButton" onclick="pop(['addStudentNotePop'],['studentNotesPop','studentNotesList'])">X</div>
+    <div class="roundButton okButton" id="addStudentNoteOkButton" onclick="addStudentNote()">V</div>
   </div>
 </div>
 
@@ -698,15 +695,11 @@
 </div>
 
 <div id="editStudentNotePop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['editStudentNotePop','editStudentNote'],['studentNotesPop','studentNotesList'])"><span>f</span></div>
-    <div class="homeButton" onclick="goHome()"><span>5</span></div>
-  </div>
-  <textarea id="editStudentNote" rows="10" cols="30"></textarea>
+  <textarea id="editStudentNote" rows="10" cols="30" onkeydown="if(event.keyCode==13)document.getElementById('editStudentNoteOkButton').click()"></textarea>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['editStudentNotePop','editStudentNote'],['studentNotesPop','studentNotesList'])">X</div>
     <div class="roundButton deleteButton" id="deleteNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editStudentNotePop'],deleteNote)">U</div>
-    <div class="roundButton okButton" onclick="editStudentNote()">V</div>
+    <div class="roundButton okButton" id="editStudentNoteOkButton" onclick="editStudentNote()">V</div>
 </div>
 </div>
 
@@ -755,9 +748,9 @@
 
 <div id="missionsPop" class="pop">
     <div id="asmvHeaderContainer">
-      <div class="asmvHeader" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])">Activity<br>Sheets</div>
+      <div class="asmvHeader" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])">ACTIVITY SHEETS</div>
       <div class="secretButton" onclick="populateNames2()"></div>
-      <div class="asmvHeader" onclick="toggleIncomplete()">Memory<br>Verses</div>
+      <div class="asmvHeader" onclick="toggleIncomplete()">MEMORY VERSES</div>
     </div>
     <div id="asmvPopContainer">
       <div id="asPop">
