--- a/class/index.html
+++ b/class/index.html
@@ -669,7 +669,6 @@
   <div class="navigationButtonContainer">
     <div class="backButton" onclick="pop(['teacherNotesPop','editTeacherNotePop'],['mainMenuPop'])"><span>f</span></div>
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
-    <!-- <div class="roundButton addButton" onclick="pop(['teacherNotesPop'],['addTeacherNotePop','addTeacherNote'])">;</div> -->
   </div>
   <div id="teacherNotesList"></div>
 </div>
@@ -687,10 +686,10 @@
     <div class="backButton" onclick="pop(['addTeacherNotePop','addTeacherNote'],['teacherNotesPop','teacherNotesList'])"><span>f</span></div>
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
   </div>
-  <textarea id="addTeacherNote" rows="10" cols="30"></textarea>
+  <textarea id="addTeacherNote" rows="10" cols="30" onkeydown="if(event.keyCode==13)document.getElementById('addTeacherNoteOkButton').click()" placeholder="Add New Note"></textarea>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['addTeacherNotePop','addTeacherNote'],['teacherNotesPop','teacherNotesList'])">X</div>
-    <div class="roundButton okButton" onclick="addTeacherNote()">V</div>
+    <div class="roundButton okButton" id="addTeacherNoteOkButton" onclick="addTeacherNote()">V</div>
   </div>
 </div>
 
@@ -708,11 +707,11 @@
     <div class="backButton" onclick="pop(['editTeacherNotePop','editTeacherNote'],['teacherNotesPop','teacherNotesList'])"><span>f</span></div>
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
   </div>
-  <textarea id="editTeacherNote" rows="10" cols="30"></textarea>
+  <textarea id="editTeacherNote" rows="10" cols="30" onkeydown="if(event.keyCode==13)document.getElementById('editTeacherNoteOkButton').click()"></textarea>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['editTeacherNotePop','editTeacherNote'],['teacherNotesPop','teacherNotesList'])">X</div>
     <div class="roundButton deleteButton" id="deleteTeacherNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editTeacherNotePop'],deleteTeacherNote)">U</div>
-    <div class="roundButton okButton" onclick="editTeacherNote()">V</div>
+    <div class="roundButton okButton" id="editTeacherNoteOkButton" onclick="editTeacherNote()">V</div>
   </div>
 </div>
 
