--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="nav-icon-text-wrapper">Student Progress</div>
                 </div></a>
 
-            <a href="docs/missions/29-shield-eph-6-16.pdf">
+            <!-- <a href="docs/missions/29-shield-eph-6-16.pdf">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper newest-icon"></div>
                     <div class="nav-icon-text-wrapper">Newest Mission</div>
@@ -35,7 +35,7 @@
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper archives-icon"></div>
                     <div class="nav-icon-text-wrapper">Archives</div>
-                </div></a>
+                </div></a> -->
             
             <a href="docs/handbook.pdf">
                 <div class="nav-icon-wrapper">
@@ -61,11 +61,11 @@
                     <div class="nav-icon-text-wrapper">YouTube Channel</div>
                 </div></a>
 
-            <a href="mailto:jonathan@ksgrade2.com">
+            <!-- <a href="mailto:jonathan@ksgrade2.com">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper contact-icon"></div>
                     <div class="nav-icon-text-wrapper">Contact</div>
-                </div></a>    
+                </div></a>     -->
 
         </div>
 
