--- a/class/index.html
+++ b/class/index.html
@@ -610,7 +610,7 @@
   </div>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['newStudentPop'],['mainPop']); clearStudentFields()">X</div>
-    <div class="roundButton newStudentOkButton" id="okButton" onclick="newStudent()">V</div>
+    <div class="roundButton okButton" id="newStudentOkButton" onclick="newStudent()">V</div>
   </div>
 </div>
 
@@ -1020,7 +1020,6 @@
     <p>fullName: <span id="fullName"></span></p>
     <p>gender: <span id="gender"></span></p>
     <p>dateAdded: <span id="dateAdded"></span></p>
-    <p>id: <span id="studentID"></span></p>
     <p>birthdayMonth: <span id="birthdayMonth"></span></p>
     <p>birthdayDate: <span id="birthdayDate"></span></p>
     <p>birthdayNumber: <span id="birthdayNumber"></span></p>
