--- a/class/students.html
+++ b/class/students.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" type="text/css" href="students-temp.css"/>
+    <link rel="stylesheet" type="text/css" href="students.css"/>
     <link rel=”shortcut icon” href =../“favicon.ico”>
     <title>students</title>
 </head>
@@ -825,7 +825,7 @@
 <div id="calendarPop"></div>
 
 </div>
-<script src="studentsBackup-temp.js"></script>
-<script src="students-temp.js"></script>
+<script src="studentsBackup.js"></script>
+<script src="students.js"></script>
 </body>
 </html>
